Edit docs and helpers to remove base_url config format

--- a/notebooks/Browser Session.ipynb
+++ b/notebooks/Browser Session.ipynb
@@ -24,7 +24,7 @@
       "from utils.appliance.implementations.ui import navigate_to\n",
       "from utils import providers, version, conf\n",
       "from cfme.configure import configuration \n",
-      "# conf.env['base_url'] = 'http://10.8.59.157'\n",
+      "# conf.env['appliances'][0]['hostname'] = '10.8.59.157'\n",
       "navigate_to(current_appliance.server, 'Dashboard')\n",
       "\n",
       "\n",
